samples/_failures_safe/1761607473_bae8b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b081d45f.c: In function ‘main’:
./samples/SAFE/__tmp_b081d45f.c:147:5: error: expected expression at end of input
  147 |     if (len >
      |     ^~
./samples/SAFE/__tmp_b081d45f.c:147:5: error: expected declaration or statement at end of input
